--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,10 +7,18 @@
 </ion-header>-->
 
 <ion-content class="mainContainer">
-  <div class="infoDiv">
+  <div class="imeiContainer">
+    <p>IMEI : 5465654656466</p>
+  </div>
+
+  <a href="#" class="proceedBtn">
+    <span>Proceed!</span>
+  </a>
+
+  <!--<div class="infoDiv">
     <p>Your Phone is Made in</p>
     <p class="countryName">{{countryOfOrigin}}</p>
-  </div>
+  </div>-->
 
 
 </ion-content>
